phalcom-ast/tests/snapshots/lexer__arithmetic_and_compound_assignment.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"total += a * b - c / 2\")"
---
[
    Identifier(
        "total",
    ),
    PlusEqual,
    Identifier(
        "a",
    ),
    Asterisk,
    Identifier(
        "b",
    ),
    Minus,
    Identifier(
        "c",
    ),
    Slash,
    Int {
        digits: "2",
        radix: 10,
    },
    Eof,
]
