phalcom-ast/tests/snapshots/lexer__block_comment_is_skipped.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"let x = 1 /* block\\n comment */ let y = 2\")"
---
[
    Let,
    Identifier(
        "x",
    ),
    Equal,
    Int {
        digits: "1",
        radix: 10,
    },
    Let,
    Identifier(
        "y",
    ),
    Equal,
    Int {
        digits: "2",
        radix: 10,
    },
    Eof,
]
