phalcom-ast/tests/snapshots/lexer__let_binding.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"let x = 42\")"
---
[
    Let,
    Identifier(
        "x",
    ),
    Equal,
    Int {
        digits: "42",
        radix: 10,
    },
    Eof,
]
