phalcom-ast/tests/snapshots/lexer__newline_after_value_is_preserved.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"a\\nb\")"
---
[
    Identifier(
        "a",
    ),
    Newline,
    Identifier(
        "b",
    ),
    Eof,
]
