phalcom-ast/tests/snapshots/lexer__numeric_digit_separators.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"1_000_000 1_000.500_5\")"
---
[
    Number(
        1000000.0,
    ),
    Number(
        1000.5005,
    ),
    Eof,
]
