phalcom-ast/tests/snapshots/lexer__shebang_at_offset_zero_is_skipped.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"#!/usr/bin/env phalcom\\nlet x = 1\")"
---
[
    Newline,
    Let,
    Identifier(
        "x",
    ),
    Equal,
    Int {
        digits: "1",
        radix: 10,
    },
    Eof,
]
