phalcom-ast/tests/snapshots/lexer__string_and_number_literals.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(r#\"let s = \"hello\" let n = 3.14\"#)"
---
[
    Let,
    Identifier(
        "s",
    ),
    Equal,
    String(
        "hello",
    ),
    Let,
    Identifier(
        "n",
    ),
    Equal,
    Number(
        3.14,
    ),
    Eof,
]
